# FHE-tokens

./: .gitignore  Cargo.toml  foundry.toml
.github/workflows/: deploy_geth.yml  gethAccounts.js  rust.yml  rust_test.yml
script/: Counter.s.sol
src/: FHEToken.sol  PaillerToken.sol  event_handler.rs  fhe_oracle.rs  main.rs
src/client/: account_handler.rs  event_handler.rs  fhe_deployer.rs  tx_handler.rs
src/contracts/: FHEToken.sol
src/crypto/: fhe_compute_handler.rs  fhe_oracle.rs
src/fhe_crypto/: fhe_compute_handler.rs  fhe_oracle.rs
src/fhe_node/: fhe_account_handler.rs  fhe_oracle.rs  fhe_tx_execution.rs
test/: Counter.t.sol  FHEToken.t.sol  PaillerToken.t.sol
