[package]
name = "privacy-tokens"
version = "0.1.0"
edition = "2021"
authors = ["Shankar Subramanian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fhe = { version = "^0.1.0-beta.5", path = "fhe.rs/crates/fhe" }
fhe-traits = { version = "^0.1.0-beta.4", path = "fhe.rs/crates/fhe-traits" }
rand = "0.8.5"
