[package]
name = "privacy-tokens"
version = "0.1.0"
edition = "2021"
authors = ["Shankar Subramanian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
fhe = { version = "^0.1.0-beta.5", path = "fhe.rs/crates/fhe" }
fhe-traits = { version = "^0.1.0-beta.4", path = "fhe.rs/crates/fhe-traits" }
ethers = "2.0.7"
tokio = { version = "1.28.2", features = ["full"] }
eyre = "0.6.8"
# bellman = "0.14.0"
# ff = "0.13.0"
# pairing = "0.23.0"
# bls12_381 = "0.8.0"
